--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 }
 
 #weatherBoxes {
-    background-color: rgb(34, 146, 146);
+    background-color: #242222;
     margin-top: 15px;
     margin-left: 5px;
     margin-right: 5px;
@@ -82,7 +82,6 @@ body {
     background-color: rgb(63, 63, 70);
     margin-top: 15px;
     text-align: center;
-    color: rgb(63, 63, 70);
     height: 100px;
 }
 
