--- a/style.css
+++ b/style.css
@@ -2,87 +2,44 @@ body {
     font-weight: lighter;
 }
 
-.header {
-    text-align: center;
-    color: white;
-    background-color: rgb(63, 63, 70);
-    height: 90px;
-    font-size: 44px;
-    line-height: 2;
-}
-
-#mainContainer {
-    height: 100%;
-}
-
-#leftCard {
-    margin-top: 15px;
-    background-color:rgb(219, 219, 219);
-    height: inherit;
-    border-radius: 5px;
-}
-
-#innerContainer {
-    background-color: white;
-    border: lightgrey solid 1px;
-    font-size: 18px;
-    color: rgb(107, 107, 107);
-    border-radius: 5px;
-    width: 100px auto;
-}
-
-#rightCard {
-    background-color: white;
-    height: inherit;
-    border: none;
-    border-radius: 0px;
-}
-
 #weatherStats {
-    background-color: rgb(156, 197, 94);
-    width: 95%;
-    margin-top: 15px;
-    height: 285px;
-    border-radius: 5px;
-    border: lightgray solid 1px;
-    color: rgb(73, 73, 73);
+    background-color: #94b95c;
+    margin-top: 25px;
+    border-radius: 10px;
+    padding-left: 40px;
+    border: #94b95c solid 1px;
+    color: #494949;
+    box-shadow: 5px 10px 5px;
 }
 
 #fiveDayForecast {
-    width: 95%;
     margin-top: 15px;
     height: inherit;
-    border: lightgrey solid 1px;
-    border-radius: 5px;
-    color: rgb(73, 73, 73);
-}
-
-#forecastRow {
-    padding-left: 50px;
+    width: 100%;
 }
 
 #weatherBoxes {
     background-color: #242222;
-    margin-top: 15px;
-    margin-left: 5px;
-    margin-right: 5px;
     text-align: center;
     height: auto;
-    border-radius: 5px;
-    border: lightgrey solid 1px;
-    margin-bottom: 15px;
-    text-align: left;
+    border-radius: 10px;
+    border: 2px solid #00000066;
     padding-top: 10px;
     color: white;
     font-size: 14px;
     padding-bottom: 15px;
+    box-shadow: 5px 10px 5px #1f1f1f;
 }
 
 .footer {
-    background-color: rgb(63, 63, 70);
+    background-color: #3f3f46;
     margin-top: 15px;
     text-align: center;
     height: 100px;
+}
+
+.weatherTemp {
+    margin-top: 10px;
 }
 
 
