--- a/style.css
+++ b/style.css
@@ -2,16 +2,6 @@ body {
     font-weight: lighter;
 }
 
-#weatherStats {
-    background-color: #94b95c;
-    margin-top: 25px;
-    border-radius: 10px;
-    padding-left: 41px;
-    color: #494949;
-    box-shadow: 5px 10px 5px;
-    padding-top: 1px;
-}
-
 #fiveDayForecast {
     margin-top: 15px;
     height: inherit;
@@ -31,15 +21,52 @@ body {
     box-shadow: 5px 10px 5px #dadada;
 }
 
-.footer {
-    background-color: #3f3f46;
-    margin-top: 15px;
-    text-align: center;
-    height: 100px;
-}
-
 .weatherTemp {
     margin-top: 10px;
 }
 
+.flip-card {
+    background-color: transparent;
+    height: 270px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    border-radius: 10px;
+    padding-left: 41px;
+    color: #494949;
+    box-shadow: 5px 10px 5px;
+    padding-top: 1px;
+  }
+  
+  .flip-card-back {
+    transform: rotateY(180deg);
+    border-radius: 10px;
+    padding-left: 41px;
+    color: white;
+    background-color: #242222;
+    box-shadow: grey 5px 10px 5px;
+    padding-top: 1px;
+  }
 
