--- a/style.css
+++ b/style.css
@@ -8,6 +8,26 @@ body {
     width: 100%;
 }
 
+hr {
+    background-color: white;
+    border: 0 none;
+    color: white;
+    height: 1px;
+    opacity: 30%;
+    margin-bottom: -10px;
+    margin-top: -20px;
+}
+
+.weatherHeadings {
+  margin-bottom: -10px;
+  font-size: 12px;
+  text-align: left;
+}
+
+.weatherDetails {
+  text-align: left;
+}
+
 #weatherBoxes {
     background-color: #242222;
     text-align: center;
@@ -36,7 +56,7 @@ body {
     background-color: transparent;
     width: 100%;
     height: 100%;
-    transition: transform 0.6s;
+    transition: transform 2s;
     transform-style: preserve-3d;
   }
   
@@ -63,10 +83,8 @@ body {
   .flip-card-back {
     transform: rotateY(180deg);
     border-radius: 10px;
-    padding-left: 41px;
     color: white;
     background-color: #242222;
     box-shadow: grey 5px 10px 5px;
-    padding-top: 1px;
   }
 
